@@ -80,7 +80,7 @@ public class BookRecommendationService {
                 })
                 .filter(Objects::nonNull)
                 .limit(limit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected Set<BookRecommendationLite> findSimilarBookIds(Long bookId, int limit) {
